# markdowny

./: .gitignore  CHANGELOG.md  DEVNOTES.md  Dockerfile  Makefile  README.md  changelog.txt  clear  convert.py  docker-run.sh  install.ps1  install.sh  pyproject.toml  test.docx  uninstall.ps1  uninstall.sh
.github/workflows/: bump.yml  ci.yml  release.yml
demo/: demo.docx  demo.tape
