[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "md-converter"
version = "0.1.0"
description = "Markdown, DOCX, and PDF converter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pypandoc",
    "requests",
    "pillow",
]

[project.optional-dependencies]
pdf-fallback = [
    "xhtml2pdf",
]

[project.scripts]
mdy = "convert:main"

[tool.setuptools]
py-modules = ["convert"]
